# alerter

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README-RU.md  README.md  alerter.go  alerter.service  go.mod  go.sum  routes.yml  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  cicd.yml  docker.yml  pkg.yml  release.yml  update-packagers.yaml  update-packagers.yml
conf/: conf.go
pkg/doc/: description.txt
pkg/scripts/: postinst  postrm  prerm
pkg/systemd/: alerter.service  alerter.sysconfig
scripts/: kac2debian_changelog.py  mangen.rs  test.sh
src/: app.rs  args.rs  duration.rs  main.rs  routes.rs  server.rs  webhook.rs
src/receivers/: matrix.rs  mod.rs  telegram.rs
systemd/: alerter.service
templates/: default.hbs  default.matrix.hbs  default.tg.hbs  default.tmpl  old.tmpl
