[package]
name = "alerter"
version = "0.2.1"
description = "Telegram bot for alerts from Prometheus"
license-file = "LICENSE"
authors = ["ultram4rine <ultramarine730@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
handlebars = "4.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.7" }
tokio = { version = "1.16", features = ["rt-multi-thread", "macros"] }
warp = "0.3"

[package.metadata.generate-rpm]
auto-req = "auto"
license = "Apache-2.0"
release = "1"
assets = [
    { source = "target/release/alerter", dest = "/usr/bin/alerter", mode = "755" },
    { source = "templates/*", dest = "/usr/share/alerter/templates", mode = "755", config = true },
    { source = "systemd/alerter.service", dest = "/usr/lib/systemd/system/alerter.service", mode = "644" },
    { source = "systemd/alerter.sysconfig", dest = "/etc/sysconfig/alerter", mode = "644", config = true },
]
pre_install_script = """
getent group alerter >/dev/null || groupadd -r alerter
getent passwd alerter >/dev/null || useradd -r -g alerter -d /usr/share/alrter -s /sbin/nologin -c "Telegram alerter for Alertmanager" alerter
"""
pre_uninstall_script = """
systemctl stop alerter.service
"""
post_uninstall_script = """
getent passwd alerter >/dev/null || userdel --remove alerter
getent group alerter >/dev/null || groupdel alerter
"""
