[package]
name = "alerter"
version = "0.2.3"
authors = ["ultram4rine <ultramarine730@gmail.com>"]
edition = "2021"
description = "Telegram bot for alerts from Alertmanager"
documentation = "https://github.com/ultram4rine/alerter"
readme = "README.md"
homepage = "https://github.com/ultram4rine/alerter#readme"
repository = "https://github.com/ultram4rine/alerter"
license = "Apache-2.0"
keywords = ["telegram-bot", "matrix-bot", "alertmanager"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive", "env"] }
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
handlebars = "4.2"
log = "0.4.8"
matrix-sdk = { version = "0.4.1", features = ["markdown"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.7" }
tokio = { version = "1.16", features = ["rt-multi-thread", "macros"] }
warp = "0.3"

[package.metadata.deb]
section = "misc"
license-file = ["LICENSE", "0"]
assets = [
    [
        "target/release/alerter",
        "/usr/bin/alerter",
        "755",
    ],
    [
        "templates/*",
        "/etc/alerter/templates/",
        "644",
    ],
    [
        "pkg/systemd/alerter.sysconfig",
        "/etc/sysconfig/alerter",
        "644",
    ],
]
conf-files = [
    "/etc/alerter/templates/default.tg.hbs",
    "/etc/alerter/templates/default.matrix.hbs",
    "/etc/sysconfig/alerter",
]
systemd-units = { unit-name = "alerter", unit-scripts = "pkg/systemd", enable = false }
maintainer-scripts = "pkg/scripts"

[package.metadata.generate-rpm]
auto-req = "auto"
release = "1"
assets = [
    { source = "target/release/alerter", dest = "/usr/bin/alerter", mode = "755" },
    { source = "templates/*", dest = "/etc/alerter/templates", mode = "644", config = true },
    { source = "pkg/systemd/alerter.service", dest = "/usr/lib/systemd/system/alerter.service", mode = "644" },
    { source = "pkg/systemd/alerter.sysconfig", dest = "/etc/sysconfig/alerter", mode = "644", config = true },
    { source = "pkg/scripts/postinst", dest = "/usr/share/alerter/scripts/postinst", mode = "755" },
    { source = "pkg/scripts/prerm", dest = "/usr/share/alerter/scripts/prerm", mode = "755" },
]
post_install_script = "/usr/share/alerter/scripts/postinst"
pre_uninstall_script = "/usr/share/alerter/scripts/prerm"
