[package]
name = "alerter"
version = "0.3.2"
authors = ["ultram4rine <ultramarine730@gmail.com>"]
edition = "2021"
description = "Telegram and Matrix bot for alerts from Alertmanager"
documentation = "https://github.com/ultram4rine/alerter"
readme = "README.md"
homepage = "https://github.com/ultram4rine/alerter#readme"
repository = "https://github.com/ultram4rine/alerter"
license = "Apache-2.0"
keywords = ["telegram-bot", "matrix-bot", "alertmanager"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mangen"
path = "scripts/mangen.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo", "derive", "env"] }
clap_mangen = "0.1"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
handlebars = "4.3"
log = "0.4.17"
matrix-sdk = { version = "0.5.0", features = ["markdown"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.9" }
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
warp = "0.3"

[package.metadata.deb]
copyright = "Copyright (c) 2022, ultram4rine <ultramarine730@gmail.com>. All rights reserved."
license-file = ["LICENSE", "0"]
depends = "$auto, libc-bin, passwd"
extended-description-file = "pkg/doc/description.txt"
section = "misc"
assets = [
    [
        "target/release/alerter",
        "/usr/bin/alerter",
        "755",
    ],
    [
        "templates/*",
        "/etc/alerter/templates/",
        "644",
    ],
    [
        "pkg/doc/alerter.1",
        "/usr/share/man/man1/alerter.1",
        "644",
    ],
    [
        "pkg/systemd/alerter.sysconfig",
        "/etc/sysconfig/alerter",
        "644",
    ],
]
maintainer-scripts = "pkg/scripts"
conf-files = [
    "/etc/alerter/templates/default.tg.hbs",
    "/etc/alerter/templates/default.matrix.hbs",
    "/etc/sysconfig/alerter",
]
changelog = "pkg/doc/changelog"
systemd-units = { unit-name = "alerter", unit-scripts = "pkg/systemd", enable = false }

[package.metadata.generate-rpm]
license = "ASL 2.0"
assets = [
    { source = "target/release/alerter", dest = "/usr/bin/alerter", mode = "755" },
    { source = "templates/*", dest = "/etc/alerter/templates", mode = "644", config = true },
    { source = "pkg/doc/alerter.1.gz", dest = "/usr/share/man/man1/alerter.1.gz", mode = "644", doc = true },
    { source = "pkg/systemd/alerter.service", dest = "/usr/lib/systemd/system/alerter.service", mode = "644" },
    { source = "pkg/systemd/alerter.sysconfig", dest = "/etc/sysconfig/alerter", mode = "644", config = true },
    { source = "pkg/scripts/postinst", dest = "/usr/share/alerter/scripts/postinst", mode = "755" },
    { source = "pkg/scripts/prerm", dest = "/usr/share/alerter/scripts/prerm", mode = "755" },
]
release = "1"
post_install_script = "/usr/share/alerter/scripts/postinst"
pre_uninstall_script = "/usr/share/alerter/scripts/prerm"
auto-req = "auto"

[package.metadata.generate-rpm.requires]
glibc-common = "*"
shadow-utils = "*"
